# PharmIDE

./: .gitignore  CLAUDE.md  ENCRYPTION-COMPLIANCE.md  README.md  TODO.md  encryption-ready-tasks.md  haiku-drug-database.json  index.html  main.jsx  merkle-audit-spec.md  ndc-search-instructions.md  package-lock.json  package.json  product-units-spec.md  reactive-data-extension-spec.md  reactive-data-layer-spec.md  rx-engine-spec.md
src/: DrugBrowser.jsx  InventoryWorkspace.jsx  PharmIDE.jsx  TauriDataProvider.js  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_db.rs  db.rs  lib.rs  main.jsx  main.rs  models.rs  sys_clock.rs
src-tauri/src/commands/: ai.rs  drug_search.rs  inventory.rs  mod.rs  patients.rs  queue.rs  rx_engine.rs
src/data/: DataProvider.js
