[package]
name = "pharmide"
version = "0.1.0"
description = "PharmIDE - Spatial pharmacy workflow interface"
authors = ["Anthony"]
edition = "2021"

[lib]
name = "pharmide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
roxmltree = "0.19"
reqwest = { version = "0.12", features = ["json"] }
